headeranpassungen - todo: anpassung an cms workflow - todo: ipad layout - problem variable breite sprachschalter in xs layout

--- a/src/sass/icons/_default.scss
+++ b/src/sass/icons/_default.scss
@@ -35,5 +35,7 @@ $svg-icon-color_hover: $colorHover;
     background-position: center center;
 }
 
-
+.fau-svg-definitions {
+    display: none;
+}
 
