--- a/src/sass/plugins/_plugins.scss
+++ b/src/sass/plugins/_plugins.scss
@@ -28,6 +28,9 @@
 // CMS Workflow
 @import "cms-workflow";
 
+// RRZE Multilang
+@import "rrze-multilang";
+
 // RRZE Elements
 @import "rrze-elements";
 
