--- a/src/sass/structure/header/_header.scss
+++ b/src/sass/structure/header/_header.scss
@@ -2,8 +2,8 @@
 /* Header
 /*-----------------------------------------------------------------------------------*/
 
-// Branding Region
-@import "headerwrap";
+// Grid in Header
+@import "grid";
 
 // Branding Region
 @import "branding";
