--- a/src/sass/plugins/_rrze-search.scss
+++ b/src/sass/plugins/_rrze-search.scss
@@ -7,6 +7,38 @@
     #search-backdrop {
 	top: $searchbackdrop-offset-top;
     }
+    &.fau-theme .meta-widget.cms-workflow-widget,
+    &.fau-theme .meta-widget.rrze-multilang-widget {
+	 @media (min-width: $screen-sm) {
+	    display: none;
+	 }
+    }
+    .header-row .meta-tools {
+	display: block;
+    }
+    &.active-meta-widget {
+
+	.searchform {
+	    padding-left: 15px;
+	    padding-right: 15px;
+	    @media (min-width: $screen-sm) {
+		width: 100%;
+	    }
+	}
+    }
+    
+    @media (min-width: $screen-sm) {
+	.meta-search .searchform .searchicon {
+	    margin-right: -55px;
+	}
+	.meta-search .searchform input[type="text"] {
+	    margin-left: 25px;
+	}
+    }
+    form[role="search"] header {
+	max-width: 50em;
+	margin: 0 auto;
+    }
 }
 .admin-bar {
      #search-backdrop {
@@ -18,7 +50,8 @@
 }
 
 .meta-search .searchform .search-settings label {
-    @media (max-width: $screen-xs - 1)  {
+    
+    @media (max-width: $screen-sm - 1)  {
 	white-space: normal;
 	
 	a {
@@ -28,5 +61,8 @@
 	a::after {
 	    display: none;
 	}
+    }
+    span {
+	white-space: normal;
     }
 }
