--- a/src/sass/structure/navigation/_menu.scss
+++ b/src/sass/structure/navigation/_menu.scss
@@ -279,7 +279,7 @@
 	}
 }
 
-/* Large device */
+/* Larger device */
 @media (min-width: $screen-sm) {
 	.mainnav-defaultview {
 	    .header-menu {
